# California-FirePred

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  pyproject.toml  requirements-live.txt
.github/workflows/: backfill_labels.yml  score_daily.yml
dashboard/: .gitignore  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: CellDetail.tsx  ControlPanel.tsx  Dashboard.tsx  DaySelector.tsx  MapView.tsx
dashboard/lib/: data.ts  dates.ts  supabase.ts  types.ts
data/reference/: dryness_climatology.json  grid_cells.json  ignition_density.json  static_features.json
docs/: 01_data_sources.md  02_model_strategy.md  03_background_research.md  04_api_reference.md  05_deployment.md
models/: calibrator.joblib  feature_list.json  model_card.json  thresholds.json  xgb_model.json
models/emulator/: bi.json  emulator_card.json  erc.json  fm100.json
notebooks/: 02_eda.ipynb  03_model_prediction.ipynb
scripts/: backfill_history.py  build_grid_cells.py  build_ignition_density.py  build_population.py  build_topography.py  download_gridmet_years.py  experiment_grade_live.py  experiment_retrain_variants.py  experiment_static_features.py  extend_dryness_climatology.py
src/data_acquisition/: config.py  fetch_air_quality.py  fetch_all.py  fetch_fire_history.py  fetch_firms.py  fetch_forecast.py  fetch_glm.py  fetch_gridmet.py  fetch_lightning.py  fetch_live.py  fetch_vegetation.py  fetch_weather.py
src/models/: emulator.py  features.py  predict.py  train.py  train_emulator.py
src/pipeline/: geo.py  (+9 more)
supabase/: README.md
(+12 files in other folders)
