[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fireproject"
version = "0.1.0"
description = "AI-powered wildfire risk prediction and detection system"
requires-python = ">=3.10"
dependencies = [
    # Data handling
    "pandas>=2.0",
    "numpy>=1.24",
    "geopandas>=0.13",
    "xarray>=2023.1",
    "netCDF4>=1.6",
    "h5py>=3.8",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pyproj>=3.5",

    # ML
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "folium>=0.14",

    # Data acquisition
    "requests>=2.31",
    "aiohttp>=3.8",
    "python-dotenv>=1.0",
    "tqdm>=4.65",
    "boto3>=1.28",

    # Geospatial
    "fiona>=1.9",

    # Jupyter
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
deep-learning = [
    "torch>=2.0",
    "tensorflow>=2.13",
]
live = [
    "supabase>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
